// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with a single expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling $12.95
  </h1>
</div>
`;

exports[`should render correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 7 expenses totalling $94.25
  </h1>
</div>
`;

exports[`should render correctly with no visible expenses 1`] = `
<div>
  <h1>
    No expenses found
  </h1>
</div>
`;
